fix: fixed spacing on sponsor section and made logos larger

--- a/src/app/(site)/css/homepageLayout.css
+++ b/src/app/(site)/css/homepageLayout.css
@@ -51,6 +51,7 @@
     width: 100vw;
     height: fit-content;
     min-height: 100vh;
+
     padding-bottom: 2%;
 }
 
@@ -63,6 +64,7 @@
     color: #493725;
     padding-top: 2%;
     padding-bottom: 2%;
+    margin-top: 3%;
 }
 
 
@@ -76,7 +78,8 @@
     position: relative;
     width: 100vw;
     height: 100px;
-    padding-bottom: 3%;
+    margin-bottom: 5%;
+    margin-top: 2%;
 }
 
 .CompanyLogo {
@@ -86,8 +89,8 @@
     align-items: center;
     object-fit: contain;
     position: relative;
+    
 }
-
 
 .Diamond {
     display: flex;
@@ -96,17 +99,18 @@
     width: 150px;
     min-width: 150px;
     padding-left: 10px;
-    border-radius: 0px 0px 15px 0px;
+
     font-family: "Literaturnaya-Regular";
     font-size: xx-large;
-    color: #493725;
+    color: #FFFCF7;
 }
+
 .hrDiamond {
     display: block;
     height: 3px;
     width: 75vw;
     border-bottom: 3px solid #4aa5f8;
-    padding-bottom: 0%;
+
 }
 
 .Platinum {
@@ -116,17 +120,17 @@
     width: 150px;
     min-width: 150px;
     padding-left: 10px;
-    border-radius: 0px 0px 15px 0px;
+
     font-family: "Literaturnaya-Regular";
     font-size: xx-large;
-    color: #493725;
+    color: #FFFCF7;
 }
 .hrPlatinum {
     display: block;
     height: 3px;
     width: 75vw;
     border-bottom: 3px solid #797979;
-    padding-bottom: 0%;
+
 }
 
 .Gold {
@@ -136,10 +140,10 @@
     width: 150px;
     min-width: 150px;
     padding-left: 10px;
-    border-radius: 0px 0px 15px 0px;
+
     font-family: "Literaturnaya-Regular";
     font-size: xx-large;
-    color: #493725;
+    color: #FFFCF7;
 }
 
 .hrGold {
@@ -147,7 +151,7 @@
     height: 3px;
     width: 75vw;
     border-bottom: 3px solid #FFDC32;
-    padding-bottom: 0%;
+
 }
 
 .OurEvents {
@@ -261,14 +265,13 @@
         margin-left: auto;
         margin-right: auto;
     }
-
-    .LogoContainer {
-        display:flex;
-        justify-content: center;
-        height: 100%;
-
+    
+    .SponsorHeading {
+        text-align: center;
+        padding-bottom: 5%;
     }
     
+
     .CompanyLogo {
         height: auto;
         min-height: 250px;
@@ -280,5 +283,37 @@
         position: relative;
         padding-left: 5%;
         padding-right: 5%;
+    }
+
+    .Diamond {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .hrDiamond {
+        width: 100vw;
+    }
+    
+    .Platinum {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .hrPlatinum {
+        width: 100vw;
+    }
+    
+    .Gold {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .hrGold {
+        width: 100vw;
+    }
+
+    .LogoContainer {
+        display: flex;
+        align-items: center;
+
     }
 }
